[metadata]
name = panko
summary = Event storage dispatcher for Ceilometer
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/panko/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    panko

[entry_points]
panko.event.storage =
    es = panko.event.storage.impl_elasticsearch:Connection
    log = panko.event.storage.impl_log:Connection
    mongodb = panko.event.storage.impl_mongodb:Connection
    mysql = panko.event.storage.impl_sqlalchemy:Connection
    postgresql = panko.event.storage.impl_sqlalchemy:Connection
    sqlite = panko.event.storage.impl_sqlalchemy:Connection
    hbase = panko.event.storage.impl_hbase:Connection

console_scripts =
    panko-api = panko.cmd.api:main
    panko-dbsync = panko.cmd.storage:dbsync
    panko-expirer = panko.cmd.storage:expirer

ceilometer.dispatcher.event =
    panko = panko.dispatcher.database:DatabaseDispatcher

oslo.config.opts =
    panko = panko.opts:list_opts

oslo.config.opts.defaults =
    panko = panko.conf.defaults:set_cors_middleware_defaults

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = true
autodoc_index_modules = true

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = panko/locale/panko.pot

[compile_catalog]
directory = panko/locale
domain = panko

[update_catalog]
domain = panko
output_dir = panko/locale
input_file = panko/locale/panko.pot
