[metadata]
name = panko
summary = Event storage publisher and API for Ceilometer
description_file =
    README.rst
author = OpenStack
author_email = openstack-dev@lists.openstack.org
home_page = https://docs.openstack.org/panko/latest/
python_requires = >=3.6
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: System :: Monitoring

[files]
packages =
    panko

[entry_points]
panko.storage =
    es = panko.storage.impl_elasticsearch:Connection
    log = panko.storage.impl_log:Connection
    mongodb = panko.storage.impl_mongodb:Connection
    mysql = panko.storage.impl_sqlalchemy:Connection
    postgresql = panko.storage.impl_sqlalchemy:Connection
    sqlite = panko.storage.impl_sqlalchemy:Connection
    hbase = panko.storage.impl_hbase:Connection

console_scripts =
    panko-dbsync = panko.cmd.storage:dbsync
    panko-expirer = panko.cmd.storage:expirer

wsgi_scripts =
    panko-api = panko.api.app:build_wsgi_app

ceilometer.event.publisher =
    panko = panko.publisher.database:DatabasePublisher

oslo.config.opts =
    panko = panko.opts:list_opts

oslo.policy.policies =
    panko = panko.policies:list_policies

oslo.config.opts.defaults =
    panko = panko.conf.defaults:set_cors_middleware_defaults

